# TaskHarvesterAI

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: commits.instructions.md
app/: cli.py  db.py  imap_client.py  ollama_client.py  processor.py
docs/: 01-audit-summary.md  02-requirements.md  03-flowcharts.md  04-entity-relationship-diagram.md  05-class-diagram.md  06-sequence-diagrams.md  SRS.md  flowchart.md
scripts/: fetch_emails.py  process_messages.py
src/app/: config.py  db.py  db_schema.py  imap_client.py  llm.py  logging_config.py  message_filter.py  processor.py  utility.py
src/app/db/: database.py
src/app/db/models/: __init__.py  ai_log.py  client.py  llm_provider_setting.py  mailbox_setting.py  message.py  message_address.py  message_attachment.py  message_filter.py  prompt_template.py  prompt_template_version.py  raw_message.py  secret_store.py  task.py  task_group.py  workspace_setting.py
src/app/db/sqlite/: database.py  tasks_schema.sql
src/app/llm_clients/: LLMClientInterface.py  OllamaClient.py  OpenAIClient.py  llm_client_interface.py  ollama_client.py  openai_client.py
src/app/migrations/: bootstrap_config_from_env.py  env.py
src/app/migrations/versions/: 0f9e7d1b2c3a_add_config_and_prompt_tables.py  2bb0814c5d64_add_message_filters.py  a6b308e0ea40_create_initial_models.py  ae553cec1ef5_create_initial_models.py
src/app/repository/: __init__.py  ai_log_repository.py  base.py  client_repository.py  llm_provider_setting_repository.py  mailbox_setting_repository.py  message_address_repository.py  message_attachment_repository.py  message_filter_repository.py  message_repository.py  prompt_template_repository.py  raw_message_repository.py  secret_store_repository.py  task_group_repository.py  task_repository.py  workspace_setting_repository.py
src/app/services/: __init__.py  prompt_defaults.py  service_configuration.py  service_first_run_setup.py  service_prompt_template.py  service_secret_vault.py
src/cli/: main.py
