[project]
name = "taskharvester-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Alvarez Quintero",email = "42385434+samuel-alvarez-quintero@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)"
]

[tool.poetry]
package-mode = true
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
