[project]
name = "taskharvester-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Alvarez Quintero",email = "42385434+samuel-alvarez-quintero@users.noreply.github.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "types-requests (>=2.33.0.20260408,<3.0.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.poetry]
package-mode = true
packages = [
    {include = "app", from = "src"},
    {include = "cli", from = "src"},
]

[tool.poetry.scripts]
taskh = "cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.20.1,<2.0.0)"
]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = [
    '^src/app/migrations/versions/'
]
